--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,15 @@
     border-radius: 0px;
 }
 
+.error-input {
+    background-color: #f8d7da !important; /* Red background color */
+  }
+
+  .error-message {
+    color: #721c24; /* Red text color */
+    font-size: 80%;
+    margin-top: 4px;
+  }
 
 
 
